# app.js
@@ -82,19 +82,10 @@ app.get('/events/joined/:userId', (req, res) => { //not done yet
   res.sendFile(path.join(__dirname, 'public/html', 'eventsJoined.html'));
 });
 
-// app.get('/events/:id/join', (req, res) => {
-//   res.sendFile(path.join(__dirname, 'public/html', 'eventJoin.html'));
-// });
-
-
 app.get('/events', (req, res) => {
   res.sendFile(path.join(__dirname, 'public/html', 'events.html'));
   // console.log(path.join(__dirname, 'public/html', 'events.html'));
 });
-
-// app.get("/events/:id", (req, res) => {
-//   res.sendFile(path.join(__dirname, 'public/html', 'eventDetails.html'));
-// });
 
 app.get("/events/:id", (req, res) => {
   res.sendFile(path.join(__dirname, 'public/html', 'eventDetails.html'));
@@ -113,19 +104,43 @@ app.get("/api/events/category/:categoryId", eventsController.getEventCategory);
 app.get("/api/events/:eventId/related/category/:categoryId", eventsController.getRelatedEvent);
 //app.get("/api/events/search", eventsController.searchEvents);
 app.get("/api/events/with-users", eventsController.getEventswithUsers);
-app.post("/api/events/with-users", eventsController.addUsertoEvent);
-app.delete("/api/events/with-users", eventsController.deleteUserfromEvent);
+// app.post("/api/events/with-users", verifyJWT, eventsController.addUsertoEvent);
+app.delete("/api/events/with-users", verifyJWT, eventsController.deleteEventandUser);
 app.get("/api/events/:id/joined", eventsController.checkIfUserJoinedEvent);
 app.get("/api/events/:id/users", eventsController.getNumberofUsersJoined);
-app.post("/api/events/:id/users", eventsController.addUsertoEvent);
-app.delete("/api/events/:id/users", eventsController.deleteUserfromEvent);
+app.post("/api/events/:id/users", verifyJWT, eventsController.addUsertoEvent);
+app.delete("/api/events/:id/users", verifyJWT, eventsController.deleteUserfromEvent);
 app.get("/api/event/:id", eventsController.getEventById);
-app.post("/api/events/create", uploadEventImage.single("image"), validateEvent, eventsController.createEvent, (req, res) => {
-  // Handle the form data here
-  console.log(req.body);
-  res.status(200).send('Event created successfully');
-}); // POST for creating books (can handle JSON data)
-app.put('/api/events/:id', uploadEventImage.single("image"), (req, res, next) => {
+app.post(
+  "/api/events/create",
+  (req, res, next) => {
+    console.log("Before verifyJWT");
+    next();
+  },
+  verifyJWT,
+  (req, res, next) => {
+    console.log("After verifyJWT, Before uploadEventImage");
+    next();
+  },
+  uploadEventImage.single("image"),
+  (req, res, next) => {
+    console.log("After uploadEventImage, Before validateEvent");
+    next();
+  },
+  validateEvent,
+  (req, res, next) => {
+    console.log("After validateEvent, Before eventsController.createEvent");
+    next();
+  },
+  eventsController.createEvent,
+  (req, res) => {
+    console.log("After eventsController.createEvent");
+    // Handle the form data here
+    console.log(req.body);
+    res.status(200).send("Event created successfully");
+  }
+);
+app.put('/api/events/:id', verifyJWT, uploadEventImage.single("image"), (req, res, next) => {
 console.log('Passed multer middleware');
 next();
 }, validateUpdateEvent, (req, res, next) => {
@@ -133,7 +148,7 @@ console.log('Passed validateUpdateEvent middleware');
 next();
 }, eventsController.updateEvent);
 // app.delete("/api/events/:id", eventsController.deleteEvent);
-app.delete("/api/events/:id/with-users", eventsController.deleteEventandUser); 
+app.delete("/api/events/:id/with-users", verifyJWT, eventsController.deleteEventandUser); 
 // app.get("/api/events/with-users/:userId", eventsController.getSpecificUserwithEvents); 
 app.get("/api/events/with-users/:eventId", eventsController.getSpecificEventwithUsers);
 
